{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 144,
  "lineage": "f2786d36-eb3f-1343-bf80-b7a6debcb155",
  "resources": [
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/networkInterfaces/Terraform-groups-sg-Hub-Nic",
            "internal_domain_name_suffix": "sptp1njz2gcufahb03gx03v12c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az-v",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet/subnets/Terraform-groups-sg-Hub-Dmz"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-FD-2A",
            "name": "Terraform-groups-sg-Hub-Nic",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "Terraform-groups-sg-RG",
            "virtual_machine_id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Compute/virtualMachines/Terraform-groups-sg-vm"
          },
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform",
            "module.v-net.azurerm_subnet.hub-dmz",
            "module.v-net.azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpbox-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/networkInterfaces/jumpbox-nic",
            "internal_domain_name_suffix": "sptp1njz2gcufahb03gx03v12c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IPConfiguration",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/publicIPAddresses/Terraform-groups-sg-jumpbox-public-ip",
                "subnet_id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet/subnets/Terraform-groups-sg-Jump-Hub-Dmz"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9C-F7-76",
            "name": "jumpbox-nic",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "Terraform-groups-sg-RG",
            "virtual_machine_id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Compute/virtualMachines/Terraform-groups-sg-vmjumpbox"
          },
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform",
            "module.v-net.azurerm_public_ip.jump-pub-ip",
            "module.v-net.azurerm_subnet.Jump-hub-dmz",
            "module.v-net.azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/networkSecurityGroups/Terraform-groups-sg-JumpboxNSG",
            "location": "eastus",
            "name": "Terraform-groups-sg-JumpboxNSG",
            "resource_group_name": "Terraform-groups-sg-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/networkSecurityGroups/Terraform-groups-sg-NSG",
            "location": "eastus",
            "name": "Terraform-groups-sg-NSG",
            "resource_group_name": "Terraform-groups-sg-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jump-pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/publicIPAddresses/Terraform-groups-sg-jumpbox-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.163.202.233",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Terraform-groups-sg-jumpbox-public-ip",
            "resource_group_name": "Terraform-groups-sg-RG",
            "sku": "Basic"
          },
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Jump-hub-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.1.0/24",
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet/subnets/Terraform-groups-sg-Jump-Hub-Dmz",
            "name": "Terraform-groups-sg-Jump-Hub-Dmz",
            "resource_group_name": "Terraform-groups-sg-RG",
            "virtual_network_name": "Terraform-groups-sg-vnet"
          },
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform",
            "module.v-net.azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/24",
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet/subnets/Terraform-groups-sg-Hub-Dmz",
            "name": "Terraform-groups-sg-Hub-Dmz",
            "resource_group_name": "Terraform-groups-sg-RG",
            "virtual_network_name": "Terraform-groups-sg-vnet"
          },
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform",
            "module.v-net.azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.v-net",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "guid": "b5fde693-e139-4285-80e1-d74d7d76bbe2",
            "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet",
            "location": "eastus",
            "name": "Terraform-groups-sg-vnet",
            "resource_group_name": "Terraform-groups-sg-RG",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet/subnets/Terraform-groups-sg-Hub-Dmz",
                "name": "Terraform-groups-sg-Hub-Dmz"
              },
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/17d30b3a-2406-4e99-8f33-60432b68107b/resourceGroups/Terraform-groups-sg-RG/providers/Microsoft.Network/virtualNetworks/Terraform-groups-sg-vnet/subnets/Terraform-groups-sg-Jump-Hub-Dmz",
                "name": "Terraform-groups-sg-Jump-Hub-Dmz"
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.rg-az.azurerm_resource_group.terraform"
          ]
        }
      ]
    }
  ]
}